<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">
        <TextView
                android:id="@+id/row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row" />
        <LinearLayout
                android:layout_width="251dp"
                android:layout_height="76dp"
                android:baselineAligned="false"
                android:orientation="horizontal">
            <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/color1"></LinearLayout>
            <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/color4"></LinearLayout>
            <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/teal_200"></LinearLayout>
        </LinearLayout>
        <TextView
                android:id="@+id/column"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/column" />
        <LinearLayout
                android:layout_width="84dp"
                android:layout_height="235dp"
                android:baselineAligned="false"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/color1"></LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/color4"></LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/teal_200"></LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/listview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listview" />
        <ListView
            android:id="@+id/ListView"
            android:layout_width="fill_parent"
            android:layout_height="190dp"
            tools:ignore="NestedScrolling" />
        <TextView
            android:id="@+id/gridview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gridview" />
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="30dp">
            <TextView
                android:id="@+id/text1"
                android:layout_width="174dp"
                android:layout_height="160dp"
                android:layout_row="1"
                android:layout_column="0"
                android:background="#80cbc4"
                android:layout_marginEnd="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/text1" />
            <TextView
                android:id="@+id/text2"
                android:layout_width="174dp"
                android:layout_height="160dp"
                android:layout_row="1"
                android:layout_column="1"
                android:background="#66CCCC"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/text2" />
            <TextView
                android:id="@+id/text3"
                android:layout_width="174dp"
                android:layout_height="160dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginTop="8dp"
                android:background="#28a59a"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/text3" />
            <TextView
                android:id="@+id/text4"
                android:layout_width="174dp"
                android:layout_height="160dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginTop="8dp"
                android:background="#28a59a"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="@string/text4" />
        </GridLayout>
    </LinearLayout>
</ScrollView>
